[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/sprites/player/Idle.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/Run.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/Scenes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/UI/Direction.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/Slash.png" type="Texture" id=6]
[ext_resource path="res://assets/Scenes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/shaders/colour.shader" type="Shader" id=8]
[ext_resource path="res://assets/Scenes/Dash_particle.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/slash.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/dash.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 5, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 5, 0, 5, 5 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 5, 5, 5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 5, 5, 5, 5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
height = 14.0

[sub_resource type="Animation" id=7]
resource_name = "Attack"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 8 )
shader_param/colour = Color( 0.705882, 0.321569, 0.321569, 0.862745 )
shader_param/enabled = false

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 4, 1.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 5, 6 )

[sub_resource type="Animation" id=16]
resource_name = "Death"
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Hurtbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_invincible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.00554, 1 )
collision_layer = 2
script = ExtResource( 3 )
DASH_COOLDOWN = 0.25
DASH_PARTICLE = ExtResource( 9 )
INITIAL_HEALTH = 6
damage_colour = Color( 0.705882, 0.321569, 0.321569, 0.705882 )
dash_colour = Color( 0.94902, 0.941176, 0.898039, 0.862745 )

[node name="DirectionArrow" type="Node2D" parent="."]

[node name="ArrowSprite" type="AnimatedSprite" parent="DirectionArrow"]
position = Vector2( 15, 0 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="Slash" type="Node2D" parent="."]

[node name="Hitbox" parent="Slash" instance=ExtResource( 7 )]
visible = false
MASK = 2

[node name="CollisionShape2D" parent="Slash/Hitbox" index="0"]
modulate = Color( 1, 0, 0.654902, 1 )
position = Vector2( 12, 1 )
rotation = 1.5708
shape = SubResource( 6 )
disabled = true

[node name="SlashAnimation" type="AnimationPlayer" parent="Slash"]
anims/Attack = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Slash"]
visible = false
position = Vector2( 18, 1 )
z_index = 1
texture = ExtResource( 6 )
hframes = 2
vframes = 2

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
material = SubResource( 8 )
position = Vector2( 0, -2 )
frames = SubResource( 12 )
animation = "Run"
playing = true

[node name="CollisionBox" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.462745, 1, 0.431373 )
position = Vector2( 0, 1 )
shape = SubResource( 13 )

[node name="Ground Sensor" type="Area2D" parent="."]
visible = false
gravity = 96.679
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground Sensor"]
modulate = Color( 0.156863, 0.121569, 0.121569, 1 )
position = Vector2( 0, 10 )
shape = SubResource( 14 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DashParticleTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 1 )
LAYER = 1
INVINCIBILITY_TIME = 0.35

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0, 1, 0.316667, 0.427451 )
shape = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 16 )

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 15.0

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 5.0

[connection signal="hit_success" from="Slash/Hitbox" to="." method="_on_hit_success"]
[connection signal="body_entered" from="Ground Sensor" to="." method="_on_grounded"]
[connection signal="body_exited" from="Ground Sensor" to="." method="_on_ground_left"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_finish"]
[connection signal="timeout" from="DashParticleTimer" to="." method="_on_spawn_dash_particle"]
[connection signal="damage_taken" from="Hurtbox" to="." method="_on_damaged"]
[connection signal="damage_taken" from="Hurtbox" to="." method="_on_damage_taken"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_invincibility_end"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_invincibility_start"]

[editable path="Slash/Hitbox"]
[editable path="Hurtbox"]
